<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:src="@mipmap/blue_compass"
            android:layout_marginTop="@dimen/login_image_margin"
            android:layout_marginBottom="@dimen/login_image_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/login_header_margin"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewHeaderLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/login_header"
                android:textSize="26sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_margin"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email"
                android:textColor="@color/login_edit_texts"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:textColor="@color/login_edit_texts"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_button_margin"
            android:layout_marginBottom="@dimen/login_button_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/login_button"
                android:background="@color/login_button_background"
                android:textColor="@color/login_button_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewForgottenPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:gravity="center"
            android:textColor="@color/login_forgotten_password"
            android:textStyle="bold"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>